feat(security): expand CORS configuration to include additional origins for development and production